--- a/Test.html
+++ b/Test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Winters Web Page</title>
+    <link rel="stylesheet"type="text/css"href="main.css">
 </head>
 <body>
 
