--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         1.1 Describing the purpose of IT in modern business
         <br>
         <br>
-        IT is used in business for instant global communication, data storage and compression has replaced the need for vast amounts of paperwork through the compression of data down to the scale of the micron. <br> 
+        IT is used in business for instant global communication, data storage.<br>
+        Compression has replaced the need for vast amounts of paperwork through the compression of data down to the scale of the micron. <br> 
         <br> The advent of Quantum computing has allowed use to use pocket dimensions to minipulate the time needed to solve complex equasions  <br>
          Metadata is used by advertisers and marketing team to taylor their approach direct to an individual.<br>
         The main purpose that I have seen has been an increase in productivity by way of efficencys in time and man power needed. <br>
@@ -70,7 +71,7 @@
         <br> How will you plan it? Include a link to your Trello board.<br>
     
          Bracking my work down into managable chunks will help me see progression I am making towards my goal.     
-        <br>
+        <br> <br>
     <a href="https://trello.com/b/43J7dhz0/web-site-design">My Trello</a>
         <br>
         <br>
@@ -86,7 +87,8 @@
         Operational risk includes risks from poor implementation and process inefficiency.<br>
         Market risks include a robust business model, foreign exchange, commodity markets, and interest rate.<br>
         Legal risks arise from legal and the costs in money and of meeting compliance for your sector.<br>
-        project risks include both internal risks associated with successfully completing each stage of the project, plus risks that are beyond the control of the project team.
+        project risks include both internal risks associated with successfully completing each stage of the project,<br>
+        plus risks that are beyond the control of the project team.
         The seriousness of the risk depends on the nature and magnitude of the possible end consequences and their probabilities.<br>
         <br>
        <a href=" https://www.linkedin.com/pulse/role-information-technology-business-success-abid-afzal-butt/">Reference</a>
@@ -140,7 +142,8 @@
    Trello can act like your manager reminding you of where you are and what your next steps are with alerts or time sensitive deadline reminders.
   <br> The project has the ability to expand as I can add further code as time passes and my ability increases. <br>
   <br>
-  2.3 Assess the strengths and weaknesses of your final project – are you happy with your website? Why? Why not? You should review it on the website itself in the interests of openness. What would you change?  <br>
+  2.3 Assess the strengths and weaknesses of your final project – are you happy with your website?<br>
+  Why? Why not? You should review it on the website itself in the interests of openness. What would you change?  <br>
   <br> 
   A the moment the website is basic due to my skill in coding, My ideas are only limited by my ability to bring them to life. <br>
   I'm not happy with the web page at the moment due to it's basic format. I am amending the web page on an add hoc basis.<br>
@@ -185,8 +188,10 @@
   - Practice practice practice..
   <br><br>
 
-  3.3 Develop solutions to improve own productivity using IT in digital projects <br>– what would you do differently next time? Team work? Use of Slack? <br> 
-  Knowing how to find and use open source data/code to speed up the process, I found and referenced a few thing but realised I could still edit that code to fit my needs created a foundation<br>
+  3.3 Develop solutions to improve own productivity using IT in digital projects <br>– what would you do differently next time? Team work? Use of Slack? <br><br>
+
+  Knowing how to find and use open source data/code to speed up the process,<br>
+  I found and referenced a few thing but realised I could still edit that code to fit my needs created a foundation<br>
   If working in a team was an option there would be more content produced on a time sensative project. Plus all people bring different <br>things to the project as two heads are better than one.<br>
   <br>
   3.4 Describe how you would go about testing digital solutions <br> 
@@ -194,10 +199,53 @@
   I was testing code on the W3schools website before adding it directly to my project.<br> 
   I used the website as a test bed so that until the section of code were just the way I wanted they couldn't alter my main code. <br>asking for feedback for others.<br> 
   </p>
+  <br> 
+</p>
+<br>
+<p>
+Unit 2: Website Software Unit 2, Outcome 1 Create structures and styles for a webpage You are setting up as an independent consultant, which is very exciting, however, you’re going to need a website of your own to highlight your skills, availability and areas of work. <br> 
+It’s time for you to create a website that details you, and including pages/sections and a how you built it page: <br>  
+<br>
+<br>
+</div>
+1.1 Describing the content and layout for each page <br> 
+<br>
+A little bare at the moment but this will be improved <br>
+<br>
 
+1.5 Describing copyright and other constraints affecting websites <br>
+Intellectual property law deals with the rules for securing and enforcing legal rights to inventions, designs, and artistic works. <br> Just as the law protects ownership of personal property and real estate, so too does it protect the exclusive control of intangible assets. <br>
+ The purpose of these laws is to give an incentive for people to develop creative works that benefit society, 
+ <br>by ensuring they can profit from their works without fear of misappropriation by others. <br><br>
+
+<a href="https://www.hg.org/intell.html"> Reference</a> <br>
+<br>
+These laws mean that you have to create your own content or run the risk of heavy fines as you are stealing from the original creator and profiting from their labors. <br>
+<br>
+1.6 Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them <br> 
+Depending on the impairment there would be a need for different solutions. <br>
+For colour blindness you can use text to advise of colours being used, or test to see what colours can be used to reduce confusion.<br>
+There are also text to type services the could help dyslexic or individuals who face diffeculties with typing. <br> Devices like the MeMu Gloves with holographic keyboards will give people the ability to create in ways that previously not possable before. <br>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2jR2yi5XPqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   <br> 
+<br>
+<br>
+1.7 Describe which are the appropriate filetypes for websites <br>
+<br>
+Gif's work well for images, .PDF stands for portable document format - these are used to manage large volumes of text. <br>
+.WAV for sound waves or music would be the types of files I would be using initially due to my familiarity.<br>
+research would teach me better ways of displaying my content. <br>
+a list of the file types, along with the applications you’ll need to get them going on your computer. this is in no way a full list<br>
+<br>
+.AVI | .CSS | .DOC | .EXE | .GIF | .HTML/ .HTM | .JPG/ .JPEG | .MID/ .MIDI | .MP3 | .MPG/ .MPEG | .MOV/ .QT | .PDF | .PNG | .RAM | .RAR | .TIFF | .TXT | .WAV | .ZIP <br> 
+<br>
+<br>
+<a href="https://www.yourhtmlsource.com/starthere/fileformats.html"> Referance</a>
+
+</p>
   <br>
   <a href="#backToTop"> Back to top</a> <br>
-  <a href="#backToPageOne"> Page 1</a>
+  
 <br>
 <br>
 <div class="left">
