--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,9 @@
         <h1> Craig Smith's Project <span class="makeMeBlue">A</span> </h1><br>
 
     </div>
-
+<div> <div class="snow__item"></div>
+<div class="snow__item"></div>
+<div class="snow__item"></div></div>
 <br> <br>
 
     Unit 1, Outcome 2 (Review) Review and adapt the ongoing use of IT tools and systems to make sure that activities are successful<br>
