--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         </p>
     </body>
-    
+    <P>
         <br>
         <br>
         1.1 Describing the purpose of IT in modern business
@@ -126,6 +126,7 @@
     To the bottom of your website add a review section that contains the following information. 
   <br>
   <br>
+    </P>
   <p>
   2.1 Review the ongoing use of IT tools and change approach as needed – in making your own website, are you happy with the tools you used?  E.g. Visual Studio Code, Trello <br>  
   <br>
@@ -138,8 +139,8 @@
   <br>
   For what was being asked for these tool would be more than capable of delivering the webpage requested. 
   <br> If you have planned your project out correctly from the begining with a time line of actions that will lead to your finished project,
-  <br> maintaining it as tasks are compleated is straight forward, this can be done after each task or at the end of a working session.<br>
-   Trello can act like your manager reminding you of where you are and what your next steps are with alerts or time sensitive deadline reminders.
+  <br> maintaining it as tasks are compleated is straight forward,this can be done after each task or at the end of a working session.
+  <br>Trello can act like your manager reminding you of where you are and what your next steps are with alerts or time sensitive deadline reminders.
   <br> The project has the ability to expand as I can add further code as time passes and my ability increases. <br>
   <br>
   2.3 Assess the strengths and weaknesses of your final project – are you happy with your website?<br>
@@ -161,15 +162,17 @@
   2.5 Review outcomes to make sure they match requirements and are fit for purpose <br>
   <br>
   Being dyslexic I was having to read and re-read the instruction to make sure I was on task,
-  <br> My first attempt at a webpage was not what was asked for but gave me insight into coding and an understanding of how even writing text was different.<br>
-   what I was writing on VS Code wouldn't necessarily translate to look the same on the webpage.<br>
+  <br> My first attempt at a webpage was not what was asked for but gave me insight into coding and an understanding<br>
+   of how even writing text was different.what I was writing on VS Code wouldn't necessarily translate to look the same on the webpage.<br>
   I will ask my tutor or a member of my team to run debugging and also after updating GitHub Im sure I will receive feedback.<br>
   I should be more adventrous with how I want things to look as at the moment I'm thinking a little basic.
-  <br>
+  <br><br>
+<br>
+<br>
   Unit 1, Outcome 3 (Review) Develop and test solutions to improve ongoing use of IT tools and systems 
   </p>
  <p>
-  <div>
+  
   
   3.1 Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency <br>
   – could you have been more efficient when making your website? How? Could you have done it in teams? <br>
@@ -203,17 +206,20 @@
 </p>
 <br>
 <p>
-Unit 2: Website Software Unit 2, Outcome 1 Create structures and styles for a webpage You are setting up as an independent consultant, which is very exciting, however, you’re going to need a website of your own to highlight your skills, availability and areas of work. <br> 
+Unit 2: Website Software Unit 2, Outcome 1 Create structures and styles for a webpage You are setting up as an independent consultant,<br>
+ which is very exciting, however, you’re going to need a website of your own to highlight your skills, availability and areas of work. <br> 
 It’s time for you to create a website that details you, and including pages/sections and a how you built it page: <br>  
 <br>
 <br>
-</div>
 1.1 Describing the content and layout for each page <br> 
 <br>
-A little bare at the moment but this will be improved <br>
+I made a test webpage that told a story, this was to learn and understand how to write text in code.<br> 
+I added YouTube video to illustrate some of my idea's to accompany the story. This allowed me to learn how to add you tube video to a web page.
+<br>A little bare at the moment but this will be improved <br>
 <br>
 
-1.5 Describing copyright and other constraints affecting websites <br>
+1.5 Describing copyright and other constraints affecting websites <br><br>
+
 Intellectual property law deals with the rules for securing and enforcing legal rights to inventions, designs, and artistic works. <br> Just as the law protects ownership of personal property and real estate, so too does it protect the exclusive control of intangible assets. <br>
  The purpose of these laws is to give an incentive for people to develop creative works that benefit society, 
  <br>by ensuring they can profit from their works without fear of misappropriation by others. <br><br>
@@ -222,9 +228,10 @@ Intellectual property law deals with the rules for securing and enforcing legal 
 <br>
 These laws mean that you have to create your own content or run the risk of heavy fines as you are stealing from the original creator and profiting from their labors. <br>
 <br>
-1.6 Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them <br> 
+1.6 Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them <br> <br>
+
 Depending on the impairment there would be a need for different solutions. <br>
-For colour blindness you can use text to advise of colours being used, or test to see what colours can be used to reduce confusion.<br>
+For colour blindness you can use text to advise of colours being used, or talk with colour blind people to see what colours can be used to reduce confusion.<br>
 There are also text to type services the could help dyslexic or individuals who face diffeculties with typing. <br> Devices like the MeMu Gloves with holographic keyboards will give people the ability to create in ways that previously not possable before. <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2jR2yi5XPqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   <br> 
